--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "gulp-webp": "^4.0.1",
     "sass": "^1.41.1",
     "terser": "^5.14.2"
+  },
+  "dependencies": {
+    "webpack-stream": "^7.0.0"
   }
 }
